Adding @AllArgsConstructor - code refactoring